# jobmatcher

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/jobmatcher/: __main__.py  matcher.py
tests/: test_matcher.py
tests/sample_data/: result.csv  result_head.csv
